kubernetes/pg-admin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-svc
  labels:
    app: pgadmin
spec:
  type: NodePort
  ports:
   - port: 80
  selector:
   app: pgadmin
